--- a/eos-ms-demo-boot/src/main/resources/application.properties
+++ b/eos-ms-demo-boot/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
 server.port=9999
 spring.application.name=MS-DEMO
-management.endpoints.web.exposure.include=hystrix.stream,health,info,loggers,service-registry,eos
+
+
+management.endpoints.web.exposure.include=hystrix.stream,health,info,loggers,eos
 management.trace.http.enabled=false
 
 eureka.instance.prefer-ip-address=true
@@ -21,13 +23,6 @@ spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.filter.stat.enabled=true
 spring.datasource.druid.stat-view-servlet.allow=0.0.0.0/0
 
-# application 
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=GMT+8
-spring.jackson.default-property-inclusion=non-null
-spring.jackson.deserialization.fail-on-unknown-properties=false
-
-
 
 
 
@@ -38,7 +33,6 @@ apollo.meta=http://10.15.15.91:18081/
 
 
 
-
 # App settings
 # http://localhost:9999/h2-console
 spring.h2.console.enabled=true
@@ -46,11 +40,18 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.jpa.open-in-view=false
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+spring.jackson.default-property-inclusion=non-null
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
 
 
