--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.primeton.eos</groupId>
         <artifactId>eos-dap-pom</artifactId>
-        <version>5.0.1-SNAPSHOT</version>
+        <version>5.0.1</version>
     </parent>
     <groupId>com.primeton.demo</groupId>
     <artifactId>eos-ms-demo</artifactId>
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>com.primeton.eos</groupId>
                 <artifactId>eos-dap-sdk-dependencies</artifactId>
-                <version>5.0.1-SNAPSHOT</version>
+                <version>5.0.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
